# banxico-sie

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: basic_usege.py
src/banxico_sie/: __init__.py  client.py  enums.py  exceptions.py
test/: test_client.py
